# backend/src/WeCms.Api/Json/WeCmsJsonSerializerContext.cs
@@ -75,6 +75,8 @@ namespace WeCms.Api.Json;
 [JsonSerializable(typeof(ApiResult<PagedResult<SecurityEventSummaryDto>>))]
 [JsonSerializable(typeof(ApiResult<SecurityEventDetailDto>))]
 [JsonSerializable(typeof(ApiResult<SecurityStatusDto>))]
+[JsonSerializable(typeof(ApiResult<SecurityRejectionSnapshotDto>))]
+[JsonSerializable(typeof(ApiResult<SecurityRejectionMetricsDto>))]
 [JsonSerializable(typeof(ApiResult<PagedResult<SecurityBanSummaryDto>>))]
 [JsonSerializable(typeof(ApiResult<SecurityBanDetailDto>))]
 [JsonSerializable(typeof(ApiResult<SecurityBanMutationResponse>))]
@@ -82,6 +84,7 @@ namespace WeCms.Api.Json;
 [JsonSerializable(typeof(ApiResult<PagedResult<FileSummaryDto>>))]
 [JsonSerializable(typeof(ApiResult<FileDetailDto>))]
 [JsonSerializable(typeof(ApiResult<FileMutationResponse>))]
+[JsonSerializable(typeof(ApiResult<FileUploadConcurrencyMetricsDto>))]
 [JsonSerializable(typeof(LoginRequest))]
 [JsonSerializable(typeof(TwoFactorVerifyRequest))]
 [JsonSerializable(typeof(TwoFactorRecoveryCodeRequest))]
@@ -188,6 +191,7 @@ namespace WeCms.Api.Json;
 [JsonSerializable(typeof(SecurityEventSummaryDto))]
 [JsonSerializable(typeof(SecurityEventDetailDto))]
 [JsonSerializable(typeof(SecurityStatusDto))]
+[JsonSerializable(typeof(SecurityRejectionMetricsDto))]
 [JsonSerializable(typeof(PagedResult<SecurityBanSummaryDto>))]
 [JsonSerializable(typeof(SecurityBanSummaryDto))]
 [JsonSerializable(typeof(SecurityBanDetailDto))]
@@ -200,6 +204,7 @@ namespace WeCms.Api.Json;
 [JsonSerializable(typeof(FileDetailDto))]
 [JsonSerializable(typeof(CreateFileRequest))]
 [JsonSerializable(typeof(FileMutationResponse))]
+[JsonSerializable(typeof(FileUploadConcurrencyMetricsDto))]
 [JsonSerializable(typeof(AuthUserDto))]
 [JsonSerializable(typeof(AuthMenuTreeDto))]
 [JsonSerializable(typeof(IReadOnlyList<AuthMenuTreeDto>))]
@@ -223,8 +228,11 @@ namespace WeCms.Api.Json;
 [JsonSerializable(typeof(IReadOnlyList<SecurityBanSummaryDto>))]
 [JsonSerializable(typeof(IReadOnlyList<FileSummaryDto>))]
 [JsonSerializable(typeof(IReadOnlyList<long>))]
+[JsonSerializable(typeof(SecurityRejectionSnapshotDto))]
 [JsonSerializable(typeof(IReadOnlyDictionary<string, string[]>))]
 [JsonSerializable(typeof(IReadOnlyDictionary<string, string>))]
 [JsonSerializable(typeof(Dictionary<string, string[]>))]
 [JsonSerializable(typeof(Dictionary<string, string>))]
+[JsonSerializable(typeof(IReadOnlyDictionary<string, long>))]
+[JsonSerializable(typeof(Dictionary<string, long>))]
 public sealed partial class WeCmsJsonSerializerContext : JsonSerializerContext;
